--- a/pytagtimerc.template
+++ b/pytagtimerc.template
@@ -31,10 +31,10 @@
 
   # ADVANCED USAGE: plug-in functions
   # pings tagged anything except "afk" get added to "dan/nafk":
-  #"dan/nafk": lambda tags: not re.search(r'\bafk\b', tags)
+  #"dan/nafk": lambda tags, ts: not re.search(r'\bafk\b', tags)
   # pings tagged "workout" get added to dave/tueworkouts, but only on tuesdays:
-  #"dave/tueworkouts": lambda tags: (re.search(r'\bworkout\b', tags) and
-  #                                  time.localtime().tm_wday == 2)
+  #"dave/tueworkouts": lambda tags, ts: (re.search(r'\bworkout\b', tags) and
+  					                     ts.tm_wday == 2)
 #}
 
 # Pings from more than this many seconds ago get autologged with tags "afk" and
